[tool.poetry]
name = "repl_pygame_Pygame-Project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
replit-python-lsp-server = {version = "^1.5.9", extras = ["yapf", "rope", "pyflakes"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
